<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="70dp"
    android:gravity="center_vertical"

    android:weightSum="1">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.05"
        android:id="@+id/backButton"
        android:src="@drawable/ic_baseline_arrow_back_ios_24"
        android:gravity="center_vertical"
        >

    </ImageView>

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.7"
        android:id="@+id/customEditText"
        android:hint="Title"
        android:gravity="center_vertical">

    </EditText>
    <TextView
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_weight="0.2"
        android:text="@string/set_location"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center_vertical"
        android:id="@+id/setLocationText"
        >

    </TextView>

</LinearLayout>