<resources>
    <string name="app_name">ToDo Tasks</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous" translatable="false">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="fill_the_title_and_the_details" translatable="false">fill the Title and the Details</string>
    <string name="set">Set</string>
    <string name="address">Task Address: %1$s</string>
    <string name="saveTask">Save</string>
    <string name="address_not_found">address not found</string>
    <string name="set_location">Set</string>
    <string name="service_not">service not found</string>

</resources>